[project]
name = "cachelib"
version = "0.2.1"
description = "A safe and lightweight caching package, written in Python."
authors = [
    {name = "Deetjepateeteke"}
]
license = {text = "MIT"}
readme = ""
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
