[project]
name = "cachelib"
version = "0.5.2"
description = "A safe and lightweight caching package, written in Python."
authors = [
    {name = "Deetjepateeteke"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
coverage = "^7.10.3"
